# master2

./: .gitignore  README.md
EstParOptim/tp1/: GCDYCST.m  GCDYOPT.m  GCST.m  GOPT.m  OPTSTEP_f.m  OPTSTEP_g.m  OPTSTEP_h.m  f.m  g.m  gradf.m  gradg.m  gradh.m  grads.m  h.m  matlab.mat  q1_2.m  q4_0.m  q4_1.m  q4_2.m  q4_3.m  q4_4.m  s.m  script1.m  script1_1.m  script1_2.m  script1_3.m  script1_4.m  script1_5.m  script1_6.m  script2_1.m  script2_2.m  script2_3.m  script2_4.m  tp1.md  wstp1.mat
EstParOptim/tp2/: DecompLUtridiag.m  GCST.m  GJ.m  J.m  Ui.m  adjoint.m  adjoint.m~  direct.m  direct.m~  f.m  f2.m  q1_3.m  q2_1_2.m  q2_3.m  q3_2.m  resyslinLUtridiag.m  script1.m  script1.m~  spmata.m  spmata.m~  uex.m
OutilsMathCAO/TPs/: CMakeLists.txt
OutilsMathCAO/TPs/tools/: fileUtils.c  fileUtils.h  matrix.c  matrix.h  point.c  point.h
OutilsMathCAO/TPs/tp1/: bezier2d.c  bezier2d.h  bezierEvaluation.sublime-workspace  dispBezier2d.m
OutilsMathCAO/TPs/tp1-bezierEval/: bezier2d.c  bezier2d.h
OutilsMathCAO/TPs/tp2/: bezier2d.c  bezier2d.h  bezierSubdivision.c  bezierSubdivision.h  bezierSubdivision.sublime-workspace  dispBezier2d.m
OutilsMathCAO/TPs/tp2-bezierSubdiv/: bezier2d.c  bezier2d.h  bezierSubdivision.sublime-workspace
OutilsMathCAO/TPs/tp3-interpolation/: fileUtils.h  interpolation.sublime-workspace  point.c  point.h
OutilsMathCAO/TPs/tp6-CarreauBezier/: bezierPatch.c  controlNetwork.c  controlNetwork.h  dispCarreau.m  genP.m
PratiqueFEM/cc-freefem/: .pnm  Hervieu-Sébastien.odt  maillage.eps  question1.edp  question2.edp  (+1 more)
ProgParallele/: main_cpu.cu
(+454 files in other folders)
